Readme updates and new config item

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,7 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "AzureModel": "gpt-4o",
     "AzureOpenAIEndpoint": "your endpoint including https://",
     "FromEmail": "youremail@domain.com",
     "FromName": "Your Email Name",
